2004-02-13  Jim Ingham  <jingham@apple.com>

	* tkMacOSXDialog.c (Tk_GetOpenFileObjCmd): Use CFStringRef for
	title & message options, not pascal strings.
	(Tk_GetSaveFileObjCmd): Ditto
	(Tk_ChooseDirectoryObjCmd): Ditto
	(NavServicesGetFile): Now that we get CFStrings, we don't need
	to convert them here.

	* tkMacOSXMenu.c (TkMacOSXDispatchMenuEvent): Cleanup, we don't
	need to handle the Apple Menu picks any more, but the code didn't
	reflect that.

	* tkMacOSXWm.c (TkSetWMName): Use CFStrings for the Window Title
	name, not Pascal strings.  
	
2004-02-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* README:       update to patchlevel 8.4.6
	* generic/tk.h:
	* macosx/Wish.pbproj/project.pbxproj:
	* unix/configure, unix/configure.in, unix/tk.spec:
	* win/configure, win/configure.in:

	* tests/window.test: simple code cleanup

	* win/tkWinDialog.c (ChooseDirectoryValidateProc): create a pidl
	for -initialdir if we have a UNC path because BFFM_SETSELECTION
	doesn't support UNC paths in strings.

2004-02-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* library/msgs/eo.msg:	Language support for Esperanto and Polish from
	* library/msgs/pl.msg:	Artur Trzewik <mail@xdobry.de> with thanks.

2004-02-09  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkImgPhoto.c (Tk_PhotoPutBlock, Tk_PhotoPutZoomedBlock): 
	* tests/imgPhoto.test (imgPhoto-16.1): Better handling of the case
	when copying from one area of a photo to another triggers a
	resizing of the image.  [Bug 877950]

2004-02-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* library/menu.tcl (::tk::MbPost): make menubuttons that post
	above or below reverse direction when not enough space is available.

2004-01-28  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tkWinCursor.c: Backported fix for bug #776646 which makes
	* tests/cursor.test: hand2 and fleur native on windows.

2003-01-27  Daniel Steffen  <das@users.sourceforge.net>

	* macosx/Wish.pbproj/project.pbxproj: removed erroneous reference